--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,7 +41,7 @@
 
       // Build a system
       const ui = SwaggerUIBundle({
-        url: "api/swagger.json",
+        url: "/api/swagger.json",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
